--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@
 .normalButton {
     @apply bg-green-700 text-[0.85rem] rounded-md p-3 text-white hover:bg-green-900 transition-all duration-500 hover:scale-105 font-medium
 }
+
+.hoveredCard:hover{
+    box-shadow: 2px 2px 2px 2px rgba(14, 57, 32, 0.7);
+    scale: 1.05;
+}
