Finish project layout

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,6 @@
     box-shadow: 2px 2px 2px 2px rgba(14, 57, 32, 0.7);
     scale: 1.05;
 }
+.medialinks {
+    box-shadow: 1px 0px 1px 1px rgba(151, 227, 183, 0.7);
+}
